--- a/src/AplikasiKasir/Register.form
+++ b/src/AplikasiKasir/Register.form
@@ -65,21 +65,16 @@
                                       <EmptySpace max="32767" attributes="0"/>
                                       <Component id="txtPassword" min="-2" pref="316" max="-2" attributes="0"/>
                                   </Group>
-                                  <Group type="102" attributes="0">
+                                  <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <Component id="lblUsername" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="103" max="-2" attributes="0"/>
-                                              <Component id="txtUsername" min="-2" pref="316" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" attributes="0">
-                                              <Group type="103" groupAlignment="1" attributes="0">
-                                                  <Component id="lblIdUser" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="lblRole" alignment="0" min="-2" pref="72" max="-2" attributes="0"/>
-                                              </Group>
-                                              <EmptySpace min="-2" pref="116" max="-2" attributes="0"/>
-                                              <Component id="txtIdUser" min="-2" pref="316" max="-2" attributes="0"/>
-                                          </Group>
+                                          <Component id="lblUsername" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblIdUser" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lblRole" alignment="0" min="-2" pref="72" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="103" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="txtIdUser" alignment="0" min="-2" pref="317" max="-2" attributes="0"/>
+                                          <Component id="txtUsername" min="-2" pref="316" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
